# movie-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  model_v1.joblib  pyproject.toml  raport_wynikow.txt  requirements-backend.txt  requirements.txt  train_dummy.py
.github/workflows/: ci.yml
notebooks/: explore.ipynb
scripts/: download_data.py
src/: api.py  config.py  dataprocessing.py  decorators.py  main.py  recommender.py  schemas.py  ui.py  visualization.py
tests/: test_all.py  test_api.py
