[project]
name = "movie-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.123.5",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.2",
    "uvicorn>=0.38.0",
]
